<resources>
    <string name="app_name">The Cinemax</string>
    <string name="splash_welcome_text">Welcome to the Movie App</string>
    <string name="content_desc_image">movie image</string>
    <string name="movie_title">movie title</string>
    <string name="movie_description">movie description</string>
    <string name="item_menu_discover">Discover</string>
    <string name="item_menu_now_playing">Now Playing</string>
    <string name="item_menu_top_rated">Top Rated</string>
    <string name="movie_genre">movie genre</string>
    <string name="production_company">production company</string>

    <string name="lorem_ipsum">In pellentesque massa placerat duis ultricies lacus sed turpis. Id volutpat lacus laoreet non curabitur. At auctor urna nunc id cursus metus aliquam eleifend. Cursus euismod quis viverra nibh cras pulvinar mattis nunc. Ultricies integer quis auctor elit sed vulputate mi sit. Fames ac turpis egestas integer. Fames ac turpis egestas sed tempus urna et pharetra pharetra. Velit aliquet sagittis id consectetur purus. Mi ipsum faucibus vitae aliquet nec. Mattis enim ut tellus elementum sagittis vitae. Nam libero justo laoreet sit amet. Enim eu turpis egestas pretium aenean. Amet purus gravida quis blandit turpis cursus in. Cursus vitae congue mauris rhoncus aenean vel elit. Proin fermentum leo vel orci porta non pulvinar neque laoreet. Mauris sit amet massa vitae tortor condimentum lacinia quis vel. Aliquam ut porttitor leo a diam. Est ullamcorper eget nulla facilisi etiam. Mi tempus imperdiet nulla malesuada pellentesque elit eget gravida. Porta non pulvinar neque laoreet suspendisse.</string>
    <string name="movie_genre_label">Movie Genre</string>
    <string name="label_continue">Finish</string>
    <string name="img_movie_details">image movie details</string>
    <string name="dummy_genre">Action - Horror - Documenter - Action - Horror - Documenter - Action - Horror - Documenter</string>
    <string name="image_author">Image Author</string>
    <string name="author_name">Author Name</string>
    <string name="author_username">Author username</string>
    <string name="label_review">Review</string>
    <string name="read_more">Read More . . .</string>
    <string name="release_date">release date</string>
    <string name="english_indonesia">English - Indonesia</string>
    <string name="label_spoken_language">Spoken Language</string>
    <string name="dreamworks_animation">DreamWorks Animation</string>
    <string name="label_production_company">Production Company</string>
    <string name="movie_poster">movie poster</string>
    <string name="play_trailer">play trailer</string>
    <string name="image_play_youtube_trailer">image play youtube trailer</string>
    <string name="check_trailer">Check Trailer</string>
    <string name="click_more_detail">More Detail</string>
    <string name="an_error_occurred">An error occurred.</string>
    <string name="try_again">Try Again</string>
    <string name="error_image">error image</string>
    <string name="no_data_review_available">No Data Review available</string>
    <string name="genre_settings">Genre Settings</string>
    <string name="relase_date">relase date</string>

</resources>