<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:background="@color/black"
            android:contentDescription="@string/img_movie_details"
            android:scaleType="centerCrop"
            android:src="@drawable/no_image_available"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_play_trailer"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/image_play_youtube_trailer"
            android:src="@drawable/ic_youtube_play"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/img_movie_detail"
            app:layout_constraintEnd_toEndOf="@id/img_movie_detail"
            app:layout_constraintStart_toStartOf="@id/img_movie_detail"
            app:layout_constraintTop_toTopOf="@id/img_movie_detail" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:indeterminate="true"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_movie_detail" />

        <LinearLayout
            android:id="@+id/layout_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_movie_detail">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_title"
                android:textAlignment="textStart"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                android:textAlignment="textStart"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/lorem_ipsum"
                android:textAlignment="textStart"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/movie_poster"
                android:scaleType="fitStart"
                android:src="@drawable/no_image_available" />

            <Button
                android:id="@+id/btn_check_trailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/check_trailer" />

            <TextView
                android:id="@+id/tv_label_spoken_lang"
                style="@style/DetailLabelStyle"
                android:layout_marginTop="24dp"
                android:text="@string/label_spoken_language" />

            <TextView
                android:id="@+id/tv_spoken_lang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/english_indonesia"
                android:textAlignment="textStart"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv_label_company_prod"
                style="@style/DetailLabelStyle"
                android:layout_marginTop="24dp"
                android:text="@string/label_production_company" />

            <TextView
                android:id="@+id/tv_company_prod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/dreamworks_animation"
                android:textAlignment="textStart"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv_label_genre"
                style="@style/DetailLabelStyle"
                android:layout_marginTop="24dp"
                android:text="@string/movie_genre_label" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/dummy_genre"
                android:textAlignment="textStart"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv_label_review"
                style="@style/DetailLabelStyle"
                android:layout_marginTop="24dp"
                android:text="@string/label_review" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:itemCount="2"
                tools:listitem="@layout/item_review" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


