<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_genre"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_author"
            android:layout_width="72dp"
            android:layout_height="0dp"
            android:contentDescription="@string/image_author"
            android:scaleType="centerCrop"
            android:src="@drawable/no_image_available"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_author"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_author_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_name"
                android:textAlignment="textStart"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_created_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_username"
                android:textAlignment="textStart"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/lorem_ipsum"
                android:textAlignment="textStart"
                android:textSize="12dp"
                android:textStyle="italic" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
