<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_trailer_movie"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_movie"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/black"
            android:contentDescription="@string/content_desc_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_play_trailer"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/image_play_youtube_trailer"
            android:src="@drawable/ic_youtube_play"
            app:layout_constraintBottom_toBottomOf="@id/img_movie"
            app:layout_constraintEnd_toEndOf="@id/img_movie"
            app:layout_constraintStart_toStartOf="@id/img_movie"
            app:layout_constraintTop_toTopOf="@id/img_movie" />

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/movie_title"
            android:textAlignment="textStart"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_movie" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>