<?xml version="1.0" encoding="utf-8"?>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:id="@+id/card_view_movie"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/img_movie"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/black"
                android:src="@drawable/ic_launcher_foreground"
                android:contentDescription="@string/content_desc_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_title"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_movie" />

            <TextView
                android:id="@+id/tv_movie_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_description"
                android:textSize="12sp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>